fix java entrypoint docker